# Sun-Synchronous-Orbit-Model

./: .gitignore  CMakeLists.txt  README.md
app/: simulation_main.cpp
include/orbit/: acceleration_model.h  body.h  constants.h  initial_conditions.h  j2_perturbation.h  orbit_simulation.h  orbital_elements.h  rk8_integrator.h  sun_synchronous_orbit.h  vector_math.h
scripts/: plot_orbit.py
src/: acceleration_model.cpp  initial_conditions.cpp  j2_perturbation.cpp  orbit_simulation.cpp  orbital_elements.cpp  rk8_integrator.cpp  sun_synchronous_orbit.cpp
